# port-kill

./: Cargo.toml  build-linux.sh  build-windows.bat
dashboard/components/: ProcessTable.vue
dashboard/pages/: history.vue
src/: app.rs  main.rs  main_console.rs  main_linux.rs  main_windows.rs  preset_manager.rs  service_detector.rs  smart_filter.rs  types.rs
src/cache/: backup.rs
