[package]
name = "port-kill"
version = "0.5.32"
edition = "2021"
authors = ["Treadie <info@treadie.com>"]
description = "A CLI tool to help you find and free ports blocking your dev work, plus manage development caches"
license = "FSL-1.1-MIT"
repository = "https://github.com/treadiehq/port-kill"
build = "build.rs"

[lib]
name = "port_kill"
path = "src/lib.rs"

[[bin]]
name = "port-kill"
path = "src/main.rs"

[[bin]]
name = "port-kill-console"
path = "src/main_console.rs"

[dependencies]
# Platform-agnostic dependencies (used by both GUI and console)
crossbeam-channel = "0.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
walkdir = "2"

[build-dependencies]
embed-resource = "1.8"

[features]
default = []
embed_icon = []

# GUI-specific dependencies (only for macOS tray icon)
[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.10"
winit = "0.29"

# Unix-specific dependencies (for process management)
[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { version = "0.27", features = ["signal", "process", "fs"] }
